# RobotControl

./: .gitignore  .gitmodules  README.md
Code/ControlGUI/: CMakeLists.txt  control_gui.cpp  serial_test.cpp
Code/ControlGUI/build-Visual Studio Community 2019 Release - amd64-release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  imgui.ini  rules.ninja
Code/ControlGUI/build-Visual Studio Community 2019 Release - amd64-release/.cmake/api/v1/reply/: cache-v2-20eaddd8c05b76fc12ff.json  codemodel-v2-efcfd4a8ad83466564cd.json  index-2020-03-05T02-31-42-0751.json  target-control_gui-Release-9cdb3cdac99a5a23fb6d.json  target-coroutines-Release-b267102acdfe2c852e42.json  target-demo-Release-b0c70f479a309d0d872e.json  target-drawing-Release-b65c10e861c61e5b407c.json  target-events-Release-c5b3d3a6eb70f760a88f.json  (+15 more)
Code/ControlGUI/build-msvc-x64-release/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ControlGUI.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  control_gui.vcxproj  control_gui.vcxproj.filters  serial_test.vcxproj  serial_test.vcxproj.filters
Code/ControlGUI/build-msvc-x64-release/Release/: imgui.ini
Code/ControlGUI/build-msvc-x64-release/control_gui.dir/Release/control_gui.tlog/: CL.read.1.tlog  CL.write.1.tlog  link-VCTIP.delete.14.tlog  link-VCTIP.delete.15.tlog  link-VCTIP.delete.7.tlog  link-VCTIP.read.23.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Code/ControlGUI/build-msvc-x64-release/mahi-gui/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  mahi_gui.sln  mahi_gui.vcxproj  mahi_gui.vcxproj.filters
Code/ControlGUI/build-msvc-x64-release/mahi-gui/examples/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  coroutines.vcxproj  coroutines.vcxproj.filters  demo.vcxproj  demo.vcxproj.filters  drawing.vcxproj  drawing.vcxproj.filters  events.vcxproj  events.vcxproj.filters  files.vcxproj  files.vcxproj.filters  likert.vcxproj  likert.vcxproj.filters  msd.vcxproj  msd.vcxproj.filters  nvg.vcxproj  nvg.vcxproj.filters  plots.vcxproj  plots.vcxproj.filters  rt_plots.vcxproj  rt_plots.vcxproj.filters
Code/ControlGUI/build-msvc-x64-release/mahi-gui/src/mahi/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
Code/ControlGUI/build-msvc-x64-release/serial_test.dir/Release/serial_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Code/MyRio/: CMakeLists.txt  rio_robot.cpp  test.cpp
Code/MyRio/cmake/: nilrt-arm-toolchain.cmake  nilrt-x64-toolchain.cmake
Code/MyRio/include/RobotLib/Control/: Filter.hpp
Code/MyRio/include/RobotLib/Robot/: Actuator.hpp  Joint.hpp  Robot.hpp  RobotConfig.hpp
Code/MyRio/include/RobotLib/Utility/: Timer.hpp
Code/MyRio/src/RobotLib/Control/: PD_Controller.cpp
Code/MyRio/src/RobotLib/Robot/: Actuator.cpp
Code/MyRio/src/RobotLib/Utility/: Timer.cpp
Sim/cpp/: CMakeLists.txt
Sim/cpp/src/: RobotGui.hpp  RobotModel.cpp  RobotModel.hpp  RobotParams.hpp  RobotSim.cpp  SimTest.cpp  gui_test.cpp
(+287 files in other folders)
